# vision-engine

./: .gitignore  README.md  main.py  pyproject.toml
config/: default.yaml  resnet.yaml
core/: __init__.py
core/layers/: __init__.py  activation.py  batchnorm.py  conv.py  linear.py  pooling.py
core/model/: model_builder.py  simple_cnn.py
core/model/resnet/: blocks.py  resnet.py
core/train/: trainer.py
datasets/: cifar10_loader.py  transform.py
tests/: batchnorm_test.py  cnn_test.py  conv_test.py  dataset.py  linear_test.py  pooling_test.py  resnet_test.py
